scrollbars astronauts fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -146,6 +146,9 @@ h1 span {
     height: 350px;
     overflow: scroll;
 
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 .astronaut {
